# Articles

./: .dockerignore  .gitignore  Dockerfile  env_example.txt  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
src/: config.py  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 994346810ddf_edit_articles.py  cb4efb26633f_edit_description_field_in_table_article.py  dd979c24ba2c_edit_description_field_in_table_article.py  fdabbdcb1432_create_table_articles.py
src/article/: __init__.py
src/article/api/: dependencies.py  router.py
src/article/schemas/: article.py
src/article/service/: __init__.py  api.py  postgre.py  redis.py
src/article/utils/: __init__.py  date_formater.py  decode_values.py
src/articles/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
src/articles/service/: api.py  postgre.py  redis.py
src/core/: config.py
src/templates/: about_article.html
static/css/: style.css
templates/: about_article.html  main.html
